--- a/aula19/assets/css/style.css
+++ b/aula19/assets/css/style.css
@@ -3,11 +3,10 @@
     padding: 0;
 }
 
-h1, p {
-    color: darkblue;
+.color-red{
+    color: red;
 }
 
-body div section p,
-body div section h1{
-    color: red;
+.main-content h2 {
+    font-style: italic;
 }
