Trabalhando com especificidade de classes + seletores por tag

--- a/aula19/assets/css/style.css
+++ b/aula19/assets/css/style.css
@@ -7,7 +7,7 @@
     color: red;
 }
 
-.main-content h2.heading {
+body.error div.main-content h2.heading{
     color: red;
     font-style: italic;
 }
