--- a/aula22 (586)/assets/style.css
+++ b/aula22 (586)/assets/style.css
@@ -24,5 +24,15 @@ a:hover{
     background: darkblue;
     color: white;
     text-decoration: none;
+    border: 1px solid #000;
+}
+
+a:active{
+    background: darkslategray;
+}
+
+input:focus {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.8);
+    outline: none;
 }
 
