--- a/aula22 (586)/assets/style.css
+++ b/aula22 (586)/assets/style.css
@@ -36,3 +36,14 @@ input:focus {
     outline: none;
 }
 
+input:disabled{
+    background-color: rebeccapurple;
+    cursor: not-allowed;
+}
+
+
+input:enabled{
+    background-color: rebeccapurple;
+    cursor: not-allowed;
+}
+
