--- a/aula22 (586)/assets/style.css
+++ b/aula22 (586)/assets/style.css
@@ -36,14 +36,17 @@ input:focus {
     outline: none;
 }
 
-input:disabled{
+/*input:disabled{
     background-color: rebeccapurple;
     cursor: not-allowed;
 }
 
-
 input:enabled{
     background-color: rebeccapurple;
     cursor: not-allowed;
+}*/
+
+input:checked+.p{
+    color: blueviolet;
 }
 
