First e Last child

--- a/aula22 (586)/assets/style.css
+++ b/aula22 (586)/assets/style.css
@@ -50,3 +50,11 @@ input:checked+.p{
     color: blueviolet;
 }
 
+.pai .lista li:first-child{
+    background-color: red;
+}
+
+.pai .lista li:last-child{
+    background: blue;
+}
+
