--- a/aula26 (590)/assets/style.css
+++ b/aula26 (590)/assets/style.css
@@ -31,7 +31,7 @@ body#b.bclass p#p.p{
     background: pink !important;
 }*/
 
-.main-container .header .heading {
+/*.main-container .header .heading {
 
-} /*indicado usar classes, porque é bem fácil sobrescrever e empatar*/
+} indicado usar classes, porque é bem fácil sobrescrever e empatar*/
 
