Se o conteúdo passar, ativa barra de rolagem (overflow-y:scroll)

--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -1,6 +1,6 @@
 .texto {
-    display: inline;
     background: red;
-    width: 100px;
-    height: 100px;
+    width: 200px;
+    height: 200px;
+    overflow-y: scroll;
 }
