--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -1,6 +1,11 @@
 .texto {
     background: red;
-    width: 200px;
+    width: 100%;
     height: 200px;
+    max-width: 600px;
+    max-height: 100%;
+    min-width: 0;
+    min-height: 0;
     overflow-y: auto;
+    margin: 10px auto;
 }
