--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -1,7 +1,10 @@
+html, body {
+    height: 100%;
+}
 .texto {
     background: red;
     width: 100%;
-    height: 200px;
+    height: 100%;
     max-width: 600px;
     max-height: 100%;
     min-width: 0;
