--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -1,14 +1,14 @@
-html, body {
+/*html, body {
     height: 100%;
-}
+}*/
 .texto {
     background: red;
     width: 100%;
     height: 100%;
     max-width: 600px;
-    max-height: 100%;
+    max-height: 500px;
     min-width: 0;
-    min-height: 0;
+    min-height: 100px;
     overflow-y: auto;
-    margin: 10px auto;
+    margin: 0 auto 50px auto;
 }
