--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -2,6 +2,7 @@
     height: 100%;
 }*/
 .texto {
+    box-sizing: content-box;
     background: red;
     width: 100%;
     height: 100%;
@@ -11,4 +12,6 @@
     min-height: 100px;
     overflow-y: auto;
     margin: 0 auto 50px auto;
+    padding: 50px;
+    border: 5px solid black;
 }
