--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -2,7 +2,7 @@
     height: 100%;
 }*/
 .texto {
-    box-sizing: content-box;
+    box-sizing: padding-box;
     background: red;
     width: 100%;
     height: 100%;
