--- a/aula28 (592)/assets/css/style.css
+++ b/aula28 (592)/assets/css/style.css
@@ -2,7 +2,7 @@
     height: 100%;
 }*/
 .texto {
-    box-sizing: padding-box;
+    box-sizing: border-box;
     background: red;
     width: 100%;
     height: 100%;
@@ -12,6 +12,7 @@
     min-height: 100px;
     overflow-y: auto;
     margin: 0 auto 50px auto;
-    padding: 50px;
-    border: 5px solid black;
+    padding: 10px 5px 15px 1px;
+    /*padding: 10px(y) 5px(x)*/
+    border: 5px double black;
 }
