--- a/aula29 (593)/assets/css/style.css
+++ b/aula29 (593)/assets/css/style.css
@@ -1,16 +1,28 @@
 * {
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
-.grid .col {
-    width: 300px;
-    height: 300px;
-    background-color: red;
-    margin: 20px;
-    float: right;
+.grid { /*faz um enchimento para dentro dos elementos filhos, ao redor*/
+    padding: 15px;;
 }
 
-p {
+.grid::after { /*adiciona um elemento vazio para cada filho e limpa para que elementos-tio n entrem no lugar*/
+    content: '';
+    display: block;
     clear: both;
+}
+
+.grid .col { /*Ajeita os elementos filhos dentro do pai (grid)*/
+    width: 33.33%;
+    height: 300px;
+    float: left;
+    padding: 15px;
+}
+
+.grid .conteudo { /*filhos de col, o padding do grid faz enchimento para dentro de seu conteudo entre os netos (div com class="conteudo")*/
+    width: 100%;
+    height: 100%;
+    background: red;
 }
