CSS unidades de medida: rem

--- a/aula31 (595)/assets/css/style.css
+++ b/aula31 (595)/assets/css/style.css
@@ -1,8 +1,13 @@
+html {
+    font-size: 62.5%;
+}
+
 .pai {
-    font-size: 50px;
+    width: 30rem;
+    background: yellow;
 }
 
 p {
-    font-size: 0.5em; /*0.5= 50px * 0.5 = 25px*/
+    font-size: 2rem; /*0.5= 50px * 0.5 = 25px*/
 }
 
