--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -19,7 +19,7 @@
 }
 
 .filha1 {
-    position: absolute;
+    position: relative;
     top: 50px; /*em relação ao topo da pagina, mas pode ser em relação a outro elemento*/
     left: 50px;
 }
