--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -19,7 +19,8 @@
 }
 
 .filha1 {
-    position: relative;
-    top: 50px; /*em relação ao topo da pagina, mas pode ser em relação a outro elemento*/
-    left: 50px;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    margin: 0
 }
