--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -8,7 +8,7 @@
 .filha2 {
     width: 300px;
     height: 300px;
-    background-color: rgba(255, 0, 0, 0.801);
+    background-color: rgba(255, 0, 0, 0.918);
     margin: 10px;
     position: static;
 }
@@ -20,7 +20,6 @@
 
 .filha1 {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    margin: 0;
+    top: 100px;
+    left: 200px;
 }
