Fazendo o elemento se esticar e caber na tela inteira zerando seus lados e mantendo height: auto e width: auto

--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -20,6 +20,10 @@
 
 .filha1 {
     position: absolute;
-    bottom: -100px;
-    right: 50px;
+    width: auto;
+    height: auto;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
 }
