--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -22,6 +22,8 @@
 
 .filha1 {
     position: absolute;
-    width: 100vw;
-    height: 100vh;
+    top: 50%;
+    margin: -150px;
+    left: 50%;
+    margin-left: -150px;
 }
