--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -7,7 +7,8 @@
 }
 
 .filha1,
-.filha2 {
+.filha2, 
+.filha3 {
     width: 300px;
     height: 300px;
     background-color: rgba(255, 0, 0, 0.918);
@@ -16,16 +17,24 @@
 }
 
 .filha2 {
-    position: absolute;
     background: greenyellow;
-    z-index: -1;
 }
 
 .filha1 {
+
+}
+
+.filha3 {
+    background: blue;
+    position: relative;
+    top: 100px;
+    left: 100px;
+}
+
+.outra{
+    background: #fff;
+    font-size: 50px;
     position: absolute;
-    top: 50%;
-    margin: -150px;
-    left: 50%;
-    margin-left: -150px;
-    z-index: 1;
+    top: 0;
+    left: 0;
 }
