--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -35,6 +35,7 @@
     background: #fff;
     font-size: 50px;
     position: absolute;
-    top: 50px;
-    left: 0;
+    /*top: 50px; /*50px do elemento relativo para baixo*/
+    right: 0;
+    bottom: 0;
 }
