--- a/aula34 (597)/assets/css/style.css
+++ b/aula34 (597)/assets/css/style.css
@@ -2,44 +2,13 @@
     margin: 0;
 }
 
-.pai {
-    height: 300vh; /*estabelece que a pagina vai ter 3x a altura da viewport*/
+ul {
+    height: 100px; /*deixa a lista com 100px de altura*/
+    overflow: auto; /**/
 }
 
-.filha1,
-.filha2, 
-.filha3 {
-    width: 300px;
-    height: 300px;
-    background-color: rgba(255, 0, 0, 0.918);
-    margin: 10px;
-    position: static;
-}
-
-.filha2 {
-    background: greenyellow;
-    position: fixed;
-    top: 30%;
-    right: 0;
-    z-index: 1;
-}
-
-.filha1 {
-
-}
-
-.filha3 {
-    background: blue;
-    position: relative;
-    top: 100px;
-    left: 100px;
-}
-
-.outra {
-    background: #fff;
-    font-size: 50px;
-    position: absolute;
-    /*top: 50px; /*50px do elemento relativo para baixo*/
-    right: 0;
-    bottom: 0;
+ul li.sticky{
+    position: sticky;
+    background: grey;
+    top: 0;
 }
