--- a/aula36 (599)/assets/css/style.css
+++ b/aula36 (599)/assets/css/style.css
@@ -1,84 +1,53 @@
-html{
-    font-size: 62.5%;
-}
-
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    /*ao adicionar o box-sizing o padding é incluído no edge content
-    para todos os elementos da página forçando a eles, a se somar para dar o tamanho pré-estabelecido*/
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.menu {
-    background-color: #0682a1;
-    font-size: 1.8rem;
-    scroll-behavior: smooth;
-    position: fixed;
-    width: 100vw;
+.grid { /*faz um enchimento para dentro dos elementos filhos, ao redor*/
+    padding: 15px;;
 }
 
-.menu nav ul {
+.grid::after { /*adiciona um elemento vazio para cada filho e limpa para que elementos-tio n entrem no lugar*/
+    content: '';
+    display: block;
+    clear: both;
+}
+
+.grid .col { /*Ajeita os elementos filhos dentro do pai (grid)*/
+
+    height: 300px;
+    float: left;
     padding: 15px;
 }
 
-.menu nav li {
-    display: inline;
-    padding: 1.5rem;
-}
-
-.menu nav a {
-    text-decoration: none;
-    color: azure;
-    padding: 1.6rem;
-}
-
-.menu nav a:hover{
-    background-color: rgba(0, 0, 0, 0.8);
-}
-
-
-.pai {
-    padding: 10px;
-    height: 100vh;
-}
-
-.pai::after {
-    content: '';
-    clear: both;
-    display: block;
-}
-
-.pai .filha {
-    padding: 10px;
-    width: 33.33%;
-    height: 300px;
-    float: left;
-}
-
-.pai .conteudo {
-    background: #f00;
-    height: 100%;
+.grid .conteudo { /*filhos de col, o padding do grid faz enchimento para dentro de seu conteudo entre os netos (div com class="conteudo")*/
     width: 100%;
+    height: 100%;
+    background: red;
 }
 
-.conteudo:hover{
-    background:rgba(0, 0, 0, 0.8);
-    cursor: pointer;
+@media all and (max-width: 568px){ /*o mesmo que @media all and (max-width: 320px)
+    all = todos os dispositivos*/
+    .grid .col{
+        width: 100%;
+    }
 }
 
-p {
-    clear: both;
-    font-size: 1.6rem;
+@media (min-width: 569px) and (max-width: 768px) { /*Para telas de no minimo 569 e no maximo 768*/
+    .grid .col{
+        width: 50%;
+    }
 }
 
-.irmao1{
-    background-color: #24a78a;
-    height: 100vh;
+@media all and (min-width: 769px) and (max-width: 1200px) { /*para telas de no minimo 769 e no maximo 1200*/
+    .grid .col{
+        width: 50%;
+    }
 }
 
-.irmao2 {
-    background-color: #b91776;
-    height: 100vh;
+@media all and (min-width: 1200px){ /*ficam 4 colunas para telas de 1200px para cima*/
+    .grid .col{
+        width: 25%;
+    }
 }
