--- a/aula36 (599)/assets/css/style.css
+++ b/aula36 (599)/assets/css/style.css
@@ -31,3 +31,28 @@ p{
     clear: both;
 }
 
+
+
+@media (max-width: 568px){
+    .grid .col{
+        width: 100%;
+    }
+}
+
+@media all and (min-width: 569px) and (max-width: 769px){
+    .grid .col{
+        width: 50%
+    }
+}
+
+@media all and (min-width: 768px) and (max-width: 1200px){
+    .grid .col{
+        width: 33.33%
+    }
+}
+
+@media all and (min-width: 1201px){
+    .grid .col{
+        width: 25%;
+    }
+}
