--- a/testes/refazendo-aula36/css/style.css
+++ b/testes/refazendo-aula36/css/style.css
@@ -5,18 +5,40 @@
 }
 
 .grid{
-    margin: 15px;
+    padding: 15px;
+    width: 1200px;
+    margin: 0 auto;
+    height: 100vh;
 }
 
 .grid .col{
     float: left;
-    width: 25%;
+    width: 33.33%;
     height: 300px;
-    margin: 15px;
+    padding: 15px;
 }
 
 .col .col-filha{
     width: 100%;
     height: 100%;
     background: green;
+}
+
+.grid::after{
+    content: '';
+    clear: both;
+    float: left;
+}
+
+.sec2{
+    clear: both;
+    height: 100vh;
+    background-color: rgb(0, 28, 53);
+}
+
+.content{
+    padding: 30px;
+    width: 1200px;
+    margin: 0 auto;
+  
 }
