--- a/testes/refazendo-aula36/css/style.css
+++ b/testes/refazendo-aula36/css/style.css
@@ -71,3 +71,22 @@
     margin: 0 auto;
 }
 
+
+@media all and (max-width: 568px){
+    .grid .col{
+        width: 100%;
+    }
+}
+
+@media all and (min-width: 569px) and (max-width: 768px){
+    .grid .col{
+        width: 50%;
+    }
+}
+
+@media all and (min-width: 769px) and (max-width: 1200px){
+    .grid .col{
+        width: 33.33%
+    }
+}
+
