--- a/aula37 (600)/assets/css/style.css
+++ b/aula37 (600)/assets/css/style.css
@@ -56,12 +56,15 @@ ul li a:hover{
     height: 300px;
     float: left;
     padding: 15px;
+
 }
 
 .grid .col-content{
-    width: 100%;
-    height: 100%;
+    width: 100px;
+    height: 100px;
     background-color: red;
+    border-radius: 50%;
+    margin: 0 auto;
 }
 
 .grid::after{
