--- a/aula38 (601)/assets/css/style.css
+++ b/aula38 (601)/assets/css/style.css
@@ -65,7 +65,7 @@ ul li a:hover{
     background-color: red;
     /*border-radius: 50%;*/
     /*margin: 0 auto;*/
-    box-shadow: -5px -5px 0 0 blue;
+    box-shadow: 0 0 15px 0 blue;
 }
 
 .grid::after{
