--- a/aula38 (601)/assets/css/style.css
+++ b/aula38 (601)/assets/css/style.css
@@ -65,7 +65,7 @@ ul li a:hover{
     background-color: red;
     /*border-radius: 50%;*/
     /*margin: 0 auto;*/
-    box-shadow: 5px 5px 5px 5px blue;
+    box-shadow: inset 5px 5px 5px blue, 5px 5px 5px rgba(0, 0, 0, .5);
 }
 
 .grid::after{
