--- a/aula38 (602)/css/style.css
+++ b/aula38 (602)/css/style.css
@@ -6,12 +6,11 @@
 
 .flex-container{
     display: flex;
-    flex-direction: column-reverse;
-    justify-content: space-evenly;
-    align-items: stretch;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
     background: yellow;
     height: 500px;
-    gap: 30px;
 }
 
 .flex-item{
