--- a/aula40 (603)/css/style.css
+++ b/aula40 (603)/css/style.css
@@ -6,16 +6,16 @@
 
 .flex-container{
     display: flex;
-    flex-direction: row;
-    justify-content: center;
+    justify-content: space-between;
     flex-wrap: wrap;
-    align-items: flex-start;
+    align-content: flex-start;
+    align-items: center;
     background: yellow;
-    height: 800px;
+    height: 640px;
 }
 
 .flex-item{
     color: aliceblue;
-    width: 100%;
     background: red;
+    margin: 10px;
 }
