Aula 604 (41) Flexbox Parte 3

--- a/aula41 (604)/css/style.css
+++ b/aula41 (604)/css/style.css
@@ -5,12 +5,13 @@
 }
 
 .flex-container{
-    display: flex;
+    display: inline-flex;
+    flex-direction: row;
     justify-content: space-between;
-    flex-wrap: wrap;
     align-items: center;
     background: yellow;
-    height: 640px;
+    height: 500px;
+    width: 200px;
 }
 
 .flex-item{
