--- a/aula41 (604)/css/style.css
+++ b/aula41 (604)/css/style.css
@@ -7,19 +7,33 @@
 .flex-container{
     display: flex;
     flex-direction: row;
-    flex-flow: row wrap;
+    flex-flow: row nowrap;
+    align-items: flex-start;
     justify-content: space-between;
     background: yellow;
+    height: 800px;
 }
 
 .flex-item{
-    flex: 1 1 320px;
-    height: 200px;
+    width: 100%;
     color: aliceblue;
     background: red;
 }
 
-.flex-item:nth-child(2){
-    flex: 10 1 320px; /*a medida que os espaços em branco aumentam o elemento recebe mais espaço*/
-    background-color: purple;
+.flex-item:nth-child(3){
+    align-self: flex-end;
 }
+
+.flex-item:nth-child(4){
+    align-self: center;
+}
+
+.flex-item:nth-child(2){
+    align-self: stretch;
+}
+
+/*
+.flex-item:nth-child(2){
+    flex: 10 1 320px; /*a medida que os espaços em branco aumentam o elemento recebe mais espaço
+    background-color: purple;
+}*/
