--- a/aula41 (604)/css/style.css
+++ b/aula41 (604)/css/style.css
@@ -20,6 +20,27 @@
     background: red;
 }
 
+.flex-item:nth-child(1){
+    order: -1;
+}
+
+.flex-item:nth-child(2){
+    order: -2;
+}
+
+.flex-item:nth-child(3){
+    order: -3;
+}
+
+.flex-item:nth-child(4){
+    order: -4;
+}
+
+.flex-item:nth-child(5){
+    order: -5;
+}
+
+/*
 .flex-item:nth-child(3){
     align-self: flex-end;
 }
@@ -30,7 +51,7 @@
 
 .flex-item:nth-child(2){
     align-self: stretch;
-}
+}*/
 
 /*
 .flex-item:nth-child(2){
