--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -11,7 +11,7 @@ body{
 
 .grid{
     display: grid;
-    grid-template-columns: 200px 1fr 2fr;
+    grid-template-columns: 1fr 1fr 1fr;
     gap: 30px;
 }
 
