usando função repeat

--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -10,9 +10,11 @@ body{
 }
 
 .grid{
+    max-width: 1200px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     gap: 30px;
+    margin: 0 auto;
 }
 
 .grid div{
