--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -12,7 +12,7 @@ body{
 .grid{
     max-width: 1200px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
     gap: 30px;
     margin: 0 auto;
 }
