Trabalhando e ocultando colunas

--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -13,7 +13,6 @@ body{
     max-width: 1200px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr 2fr);
     gap: 30px;
     margin: 0 auto;
 }
@@ -22,4 +21,17 @@ body{
     display: grid;
     background: fuchsia;
     min-height: 100px;
+}
+
+.grid div:nth-child(5), .grid div:nth-child(6){
+    background: darkblue ;
+    grid-column-start: 1;
+    grid-column-end: 4;
+    grid-row-start: 3;  
+}
+
+
+.grid div:nth-child(5){ /*a celula 5 fica por cima da celula 6*/
+    background-color: yellow;
+    z-index: 1;
 }
