--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -23,11 +23,12 @@ body{
     min-height: 100px;
 }
 
-.grid div:nth-child(5), .grid div:nth-child(6){
+.grid div:nth-child(5){
     background: darkblue ;
     grid-column-start: 1;
     grid-column-end: 4;
-    grid-row-start: 3;  
+    grid-row-start: 2; 
+    grid-row-end: 10; 
 }
 
 
