--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -24,11 +24,8 @@ body{
 }
 
 .grid div:nth-child(5){
-    background: darkblue ;
-    grid-column-start: 1;
-    grid-column-end: 4;
-    grid-row-start: 2; 
-    grid-row-end: 10; 
+    background: darkblue;
+    grid-row: span 8;
 }
 
 
