trabalhando com span na coluna

--- a/aula43 (606)/css/style.css
+++ b/aula43 (606)/css/style.css
@@ -25,7 +25,8 @@ body{
 
 .grid div:nth-child(5){
     background: darkblue;
-    grid-row: span 8;
+    grid-row: span 1;
+    grid-column: span 2;
 }
 
 
