--- a/aula44 (607)/css/style.css
+++ b/aula44 (607)/css/style.css
@@ -13,6 +13,7 @@ body{
     max-width: 1200px;
     display: grid;
     grid-template-columns: [um] 1fr [dois] 1fr [três] 1fr [quatro];
+    grid-template-rows: [um] 1fr [dois] 1fr [três] 1fr [quatro];
     gap: 30px;
     margin: 0 auto;
 }
@@ -31,6 +32,7 @@ body{
     background-color: yellow;
     /*grid-column-start: 1;
     grid-column-end: 4;*/
-    grid-column: um / quatro;
+    grid-column: span 2;
+    grid-row: um / tres;
 }
 
