--- a/aula45 (608)/css/style.css
+++ b/aula45 (608)/css/style.css
@@ -12,10 +12,11 @@ body{
 .container{
     max-width: 1200px;
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 .grid{
-    width: 1230px;
+    width: calc(100% + 30px);
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
 }
